# planktonclas

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  config.yaml  config_zooscan-gabriele.yaml  config_zooscan-max.yaml  pyproject.toml  requirements-pi10.txt  requirements.txt
.github/workflows/: integration.yml  tests.yml
PI10/: VLIZ-Pi-10_processing.py  debug.py  predict_gpu.py  predict_gpu_config.example.json  predict_gpu_remote.py  predict_o.py  readme.md  test.py
docs/: api_usage.rst  conf.py  index.rst  installation.rst  notebooks.rst  python_usage.rst  quickstart.rst  reference.rst
etc/: config.yaml
models/2025-10-09_140052-anasimyia/conf/: conf.json  conf.txt
models/2025-10-09_140052-anasimyia/dataset_files/: classes.txt  test.txt  train.txt  val.txt
models/2025-10-09_140052-anasimyia/predictions/: final_model.h5+DS_split+top5.json
models/2025-10-09_140052-anasimyia/stats/: stats.json
models/cyto_model/conf/: conf.json  conf.txt
models/cyto_model/dataset_files/: classes.txt  test.txt  train.txt  val.txt
notebooks/: 1.0-Dataset_exploration.ipynb  1.2-Image_augmentation.ipynb  2.0-Model_training.ipynb  3.0-Computing_predictions.ipynb  3.1-Prediction_statistics.ipynb  3.2-Saliency_maps.ipynb
planktonclas/: api.py  cli.py  config.py  data_utils.py  model_utils.py  optimizers.py  paths.py  plot_utils.py  test_utils.py  train_runfile.py  utils.py  warnings_config.py
planktonclas/resources/: config.yaml
planktonclass/: __main__.py  api.py  api_test.py  cli.py  config.py  config_test.py  data_utils.py  model_utils.py  optimizers.py  paths.py  plot_utils.py  report_utils.py  test_utils.py  train_runfile.py  utils.py  warnings_config.py
planktonclass/resources/: config.yaml
planktonclass/visualization/: guided_backprop.py  integrated_gradients.py  saliency.py  utils.py  visual_backprop.py
tests/: test_cli_smoke.py  test_dataset_smoke.py
tests/integration/: config_smoke_matrix.py  path_sanity_check.py
tests/smoke/: test_cli_smoke.py  test_dataset_smoke.py
(+13 files in other folders)
